--- a/FrontEnd/src/Pages/Student/StudentRequest.css
+++ b/FrontEnd/src/Pages/Student/StudentRequest.css
@@ -127,7 +127,7 @@
 .request-form select,
 .request-form textarea {
   width: 100%;
-  padding: 14px 16px;
+  /* padding: 14px 16px; no padding reuired */
   border-radius: 12px;
   border: 2px solid #e5e7eb;
   font-size: 15px;
